--- a/css/style.css
+++ b/css/style.css
@@ -15,78 +15,152 @@
 
 :root {
   font-family: "Noto Sans JP", sans-serif;
+  background-color: #efefef;
+  --white: #fff;
+  --gray: #333;
+  --lightgray: #aaa;
+  --green: #104848;
+  --lightgreen: #50a898;
+  --llightgreen: #a0c8b8;
+  --blue: #5b97be;
+  --red: #ee8888;
+  --mini-font-size: 20px;
+  --header-footer-height: 50px;
 }
 
-section {
-  background-color: #efefef;
+section.normal {
   font-family: "Noto Sans JP", sans-serif;
   justify-content: start;
 }
 
+section.title {
+  font-family: "Noto Sans JP", sans-serif;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--gray);
+}
+
+section.index {
+  font-family: "Noto Sans JP", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  font-weight: bold;
+  color: var(--gray);
+}
+
 section::after {
+  font-size: 32px;
+  color: var(--gray);
+  bottom: 10px;
+  font-weight: normal;
+}
+
+section.title::after {
   font-size: 30px;
-  color: #555;
+  color: var(--white);
   bottom: 10px;
 }
 
 header {
-  color: #666;
+  color: var(--gray);
   font-size: 16pt;
   top: 10px;
+  font-weight: normal;
 }
 
 footer {
-  color: #666;
+  color: var(--gray);
   font-size: 16pt;
   font-family: "Noto Sans JP", sans-serif;
   left: 30px;
   bottom: 10px;
+  font-weight: normal;
 }
 
-h1 {
-  margin: 1px;
+section.title h1 {
   font-size: 2.5em;
-  color: #00375e;
-}
-
-h2 {
-  margin: 3px 3px 50px 3px;
-  font-size: 1.5em;
-}
-
-h3 {
-  font-size: 1.8em;
+  color: var(--green);
   text-align: center;
-  position: relative;
-  padding: 0.8rem;
 }
 
-h3:after {
+section.title h2 {
+  font-size: 1.7em;
+  text-align: center;
+  color: var(--gray);
+}
+
+section.index h1 {
+  font-size: 2.0em;
+  color: var(--green);
+  text-align: center;
+  background: var(--white);
+  padding: 0.2em 0.8em;
+}
+
+section.normal h1 {
+  position: relative;
+  padding: 1rem 0.5rem;
+  color: var(--gray);
+}
+
+section.normal h1:after {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 10px;
+  height: 5px;
   content: '';
-  background-image: -webkit-repeating-linear-gradient(135deg, #000, #000 1px, transparent 2px, transparent 5px);
-  background-image: repeating-linear-gradient(-45deg, #000, #000 1px, transparent 2px, transparent 5px);
-  background-size: 7px 7px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  background-image: linear-gradient(to right, var(--green) 0%, var(--lightgreen) 70%, #efefef 100%);
 }
 
-img[alt~="center"] {
-  display: block;
-  margin: 0 auto;
-}
-
-h4 {
-  padding: 0.5em 1em;
-  margin: 0.7em 0;
-  background: #ffffff;
-  border-left: solid 6px #5b97be;
-  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.33);
+section.normal h2 {
+  color: var(--gray);
+  padding: 0.5em;
   display: inline-block;
+  line-height: 1.3;
+  background: var(--white);
+  vertical-align: middle;
+  border-radius: 25px 0px 0px 25px;
+  /*左側の角を丸く*/
+  border: solid 1px var(--lightgray);
+}
+
+section.normal h2:before {
+  content: '●';
+  color: #efefef;
+  margin-right: 8px;
+  text-shadow:
+    -1px -1px 0 var(--lightgray),
+    1px -1px 0 var(--lightgray),
+    -1px 1px 0 var(--lightgray),
+    1px 1px 0 var(--lightgray);
+}
+
+section.normal h3 {
+  text-align: center;
+  color: var(--gray);
+  padding: 0.5em;
+  mergin: 0.5em;
+}
+
+.box1 {
+  margin: 2em auto;
+  padding: 2em;
+  background-image: linear-gradient(0deg, transparent 18px, #ccc 20px), linear-gradient(90deg, transparent 18px, #ccc 20px);
+  background-size: 20px 20px;
+  background-color: var(--white);
+}
+
+.box2 {
+  margin: 0em;
+  padding: 0.3em;
+  border-radius: 30px 60px/60px 30px;
+  border: solid 8px var(--llightgreen);
 }
 
 table {
@@ -100,4 +174,48 @@ table::-webkit-scrollbar {
 
 rt {
   font-size: 12pt;
+}
+
+img[alt~="center"] {
+  display: block;
+  margin: 0 auto;
+}
+
+blockquote {
+  border-top: 0.1em dashed var(--black);
+  font-size: var(--mini-font-size);
+  width: 100%;
+  width: 90%;
+  position: absolute;
+  bottom: var(--header-footer-height);
+  padding-left: 0px;
+}
+
+blockquote::before {
+  display: none;
+}
+
+blockquote::after {
+  display: none;
+}
+
+.head-border {
+  display: flex;
+  align-items: center;
+}
+
+.head-border:before,
+.head-border:after {
+  content: '';
+  height: 1px;
+  flex-grow: 1;
+  background-color: var(--gray);
+}
+
+.head-border:before {
+  margin-right: 20px;
+}
+
+.head-border:after {
+  margin-left: 20px;
 }
