--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 
 /*!
- * Marp TuesdayJZ theme.
- * @theme tuesdayjz
- * @author TuesdayJZ
- *
- * @auto-scaling true
- * @size 4:3 960px 720px
- * @size 16:9 1280px 720px
- */
+  Marp TuesdayJZ theme.
+  @theme tuesdayjz
+  @author TuesdayJZ
+
+  @auto-scaling true
+  @size 4:3 960px 720px
+  @size 16:9 1280px 720px
+  */
 
 @import 'default';
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;400;700&family=Noto+Serif+JP:wght@200;400;700&display=swap");
@@ -21,11 +21,15 @@
   --lightgray: #aaa;
   --green: #104848;
   --lightgreen: #50a898;
-  --llgreen: #d0e8d8;
+  --llightgreen: #c6e799;
   --blue: #5b97be;
   --red: #ee8888;
   --mini-font-size: 20px;
   --header-footer-height: 50px;
+}
+
+section {
+  cursor: url(./img/laser-red.png), pointer;
 }
 
 section.normal {
@@ -104,7 +108,7 @@ section.index h1 {
 
 section.normal h1 {
   position: relative;
-  padding: 1rem 0.5rem;
+  padding: 0.5rem;
   color: var(--gray);
 }
 
@@ -113,38 +117,20 @@ section.normal h1:after {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 5px;
+  height: 7px;
   content: '';
-  background-image: linear-gradient(to right, var(--green) 0%, var(--lightgreen) 70%, #efefef 100%);
+  background-image: linear-gradient(to right, var(--green) 0%, var(--lightgreen) 50%, var(--llightgreen) 80%, #efefef 100%);
 }
 
 section.normal h2 {
-  color: var(--gray);
-  padding: 0.5em;
+  background: linear-gradient(transparent 70%, var(--llightgreen) 70%);
   display: inline-block;
-  line-height: 1.3;
-  background: var(--white);
-  vertical-align: middle;
-  border-radius: 25px 0px 0px 25px;
-  /*左側の角を丸く*/
-  border: solid 1px var(--lightgray);
-}
-
-section.normal h2:before {
-  content: '●';
-  color: #efefef;
-  margin-right: 8px;
-  text-shadow:
-    -1px -1px 0 var(--lightgray),
-    1px -1px 0 var(--lightgray),
-    -1px 1px 0 var(--lightgray),
-    1px 1px 0 var(--lightgray);
 }
 
 section.normal h3 {
   text-align: center;
   color: var(--gray);
-  padding: 0.5em;
+  padding: 0em;
   margin: 0.5em;
 }
 
@@ -161,7 +147,7 @@ section.normal h3 {
   padding: 0.3em;
   width: 90%;
   background-color: #efefef;
-  box-shadow: 0 0 5px 1px #aaaaaa;
+  box-shadow: 0 0 7px 3px #aaaaaa;
 }
 
 table {
