--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@
   --green: #104848;
   --lightgreen: #50a898;
   --llightgreen: #c6e799;
-  --blue: #5b97be;
-  --red: #ee8888;
-  --mini-font-size: 20px;
-  --header-footer-height: 50px;
+  --blue: #134668;
+  --red: #863636;
+  --mini-font-size: 18px;
+  --header-footer-height: 40px;
 }
 
 section {
@@ -62,6 +62,7 @@ section::after {
   color: var(--gray);
   bottom: 10px;
   font-weight: normal;
+  content: attr(data-marpit-pagination) " / " attr(data-marpit-pagination-total);
 }
 
 section.title::after {
@@ -73,7 +74,8 @@ section.title::after {
 header {
   color: var(--gray);
   font-size: 16pt;
-  top: 10px;
+  top: 8px;
+  bottom: 0%;
   font-weight: normal;
 }
 
@@ -108,7 +110,7 @@ section.index h1 {
 
 section.normal h1 {
   position: relative;
-  padding: 0.5rem;
+  padding: 0 0 0.5rem 0;
   color: var(--gray);
 }
 
@@ -119,10 +121,13 @@ section.normal h1:after {
   width: 100%;
   height: 7px;
   content: '';
-  background-image: linear-gradient(to right, var(--green) 0%, var(--lightgreen) 50%, var(--llightgreen) 80%, #efefef 100%);
+  background-image: linear-gradient(to right, var(--blue) 0%, var(--green) 10%, var(--lightgreen) 50%, var(--llightgreen) 90%, #efefef 100%);
 }
 
 section.normal h2 {
+  padding: 0 0 0.3rem 0;
+  color: var(--gray);
+  margin: 0.3rem 0 0.5rem 0;
   background: linear-gradient(transparent 70%, var(--llightgreen) 70%);
   display: inline-block;
 }
@@ -130,8 +135,8 @@ section.normal h2 {
 section.normal h3 {
   text-align: center;
   color: var(--gray);
-  padding: 0em;
-  margin: 0.5em;
+  padding: 0.1em;
+  margin: 0.2em;
 }
 
 .box1 {
@@ -143,16 +148,16 @@ section.normal h3 {
 }
 
 .box2 {
-  margin: 0.5em auto;
-  padding: 0.3em;
-  width: 90%;
+  margin: 0.25em auto;
+  padding: 0.2em 0.5em 0em 0em;
+  width: auto;
   background-color: #efefef;
   box-shadow: 0 0 7px 3px #aaaaaa;
 }
 
 table {
   text-align: center;
-  background-color: #5b97be;
+  background-color: var(--blue);
 }
 
 table::-webkit-scrollbar {
@@ -161,6 +166,7 @@ table::-webkit-scrollbar {
 
 rt {
   font-size: 12pt;
+  margin: auto;
 }
 
 img[alt~="center"] {
@@ -168,14 +174,22 @@ img[alt~="center"] {
   margin: 0 auto;
 }
 
+li::marker {
+  color: var(--green);
+  font-size: 30px
+}
+
+.bulb ul{
+  list-style-type: "\1F4A1";
+}
+
 blockquote {
-  border-top: 0.1em dashed var(--black);
   font-size: var(--mini-font-size);
-  width: 100%;
-  width: 90%;
   position: absolute;
-  bottom: var(--header-footer-height);
-  padding-left: 0px;
+  top: var(--header-footer-height);
+  right: 30px;
+  padding-left: 20px;
+  color: var(--green);
 }
 
 blockquote::before {
@@ -205,4 +219,14 @@ blockquote::after {
 
 .head-border:after {
   margin-left: 20px;
+}
+
+code {
+  font-size: var(--mini-font-size);
+  display: inline-block;
+  padding: 0.1em 0.25em;
+  color: var(--black);
+  background-color: var(--white);
+  border-radius: 3px;
+  border: solid 1px var(--lightgray);
 }
