--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*!
-  Marp TuesdayJZ theme.
+  Marp tuesdayjz theme.
   @theme tuesdayjz
   @author TuesdayJZ
 
@@ -22,9 +22,11 @@
   --lightgray: #aaa;
   --blue: #134d68;
   --lightblue: #1a7894;
-  --llightblue: #97bbc9;
+  --extralightblue: #97bbc9;
   --yellow: #ece58b;
+  --orange: #ff8656ab;
   --pink: #bd909b;
+  --green: #99eea075;
   --mini-font-size: 18px;
   --header-footer-height: 40px;
   background-color: var(--background);
@@ -46,7 +48,7 @@ section.title {
   align-items: center;
   text-align: center;
   color: var(--gray);
-  background-image: linear-gradient(150deg, var(--llightblue), var(--lightgray), var(--pink));
+  background-image: linear-gradient(135deg, var(--extralightblue), var(--lightgray), var(--orange));
 }
 
 section.index {
@@ -127,14 +129,14 @@ section.normal h1:after {
   width: 100%;
   height: 10px;
   content: '';
-  background-image: linear-gradient(to right, var(--blue) 0%, var(--lightblue) 30%, var(--llightblue) 60%, var(--background) 100%);
+  background-image: linear-gradient(to right, var(--blue) 0%, var(--lightblue) 30%, var(--extralightblue) 60%, var(--background) 100%);
 }
 
 section.normal h2 {
   padding: 0 0 0.3rem 0;
   color: var(--gray);
   margin: 0.3rem 0 0.5rem 0;
-  background: linear-gradient(transparent 65%, var(--llightblue) 20%);
+  background: linear-gradient(transparent 65%, var(--extralightblue) 20%);
   display: inline-block;
 }
 
@@ -156,8 +158,8 @@ section.normal h3 {
   margin: 0.25em auto;
   padding: 0.2em 0.5em 0em 0em;
   width: auto;
-  background-color: #efefef;
-  box-shadow: 0 0 7px 3px #aaaaaa;
+  background-color: var(--white);
+  box-shadow: 0 0 7px 3px var(--extralightblue);
 }
 
 table {
@@ -194,7 +196,7 @@ blockquote {
   top: 20px;
   right: 30px;
   padding-left: 20px;
-  color: var(--blue);
+  color: var(--lightblue);
 }
 
 blockquote::before {
@@ -239,5 +241,5 @@ a {
 }
 
 .marker {
-  background: linear-gradient(transparent 65%, var(--yellow) 20%);
+  background: linear-gradient(transparent 65%, var(--orange) 20%);
 }
